syntax = "proto3";

package proto.wireguard;

message MountRequest {
  string interface_name = 1;
  string private_key = 2;
  string listen_port = 3;
  string physical_interface = 4;
  string subnet = 5;
  string address = 6;
}

message EmptyRequest {}

message InterfaceRequest { string interface_name = 1; }

message AddPeerRequest {
  string user_id = 1;
  string device_name = 2;
  string interface_name = 3;
  string public_key = 4;
  string preshared_key = 5;
  string allowed_ips = 6;
  string persistent_keepalive = 7;
  string endpoint = 8;
}

message DeletePeerRequest {
  string interface_name = 1;
  string public_key = 2;
}

message MessageResponse { string message = 1; }

message NetworkInterface { string interface = 1; }

message ListInterfacesResponse { repeated NetworkInterface data = 1; }

service WireguardService {
  rpc mount(MountRequest) returns (MessageResponse);
  rpc umount(InterfaceRequest) returns (MessageResponse);
  rpc down(InterfaceRequest) returns (MessageResponse);
  rpc up(InterfaceRequest) returns (MessageResponse);
  rpc restart(InterfaceRequest) returns (MessageResponse); 
  rpc addPeer(AddPeerRequest) returns (MessageResponse);
  rpc deletePeer(DeletePeerRequest) returns (MessageResponse);
  rpc interfaces(EmptyRequest) returns (ListInterfacesResponse);
}
